--- a/Exploracion_nicial.ipynb
+++ b/Exploracion_nicial.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "b8f407fb",
+   "execution_count": 4,
+   "id": "bf0dbcf0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +14,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
-   "id": "79b899da",
+   "execution_count": 5,
+   "id": "e4706ccd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,13 +23,13 @@
     "\n",
     "data=pd.read_csv(ruta)\n",
     "\n",
-    "   "
+    "## test de actualizacion "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "613728b1",
+   "id": "9bd4f7cc",
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "18bfda63",
+   "id": "b36e761e",
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "e4e83341",
+   "id": "21a95b9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "fb4baa53",
+   "id": "1a69f3b9",
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "00bdc5bb",
+   "id": "e0594e3b",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "843e8816",
+   "id": "1d13e024",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "fc1013eb",
+   "id": "adbb1d29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "a3e307a9",
+   "id": "08b7b0ce",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "94c706c6",
+   "id": "4815177b",
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "6151c1f9",
+   "id": "2ce3a610",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "8ce9e093",
+   "id": "be57c771",
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "08c005f8",
+   "id": "98c3c036",
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "b001fee1",
+   "id": "c8c5ccdb",
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71c4ea56",
+   "id": "dc3f9ab2",
    "metadata": {},
    "source": [
     "table_sex=pd.crosstab(index=train['Sex'], columns=train['Risk'], margins=True)"
@@ -704,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "9976124a",
+   "id": "ac6f0e57",
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +785,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "7008014f",
+   "id": "cf7ff9b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "2755194e",
+   "id": "990e2f0c",
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +878,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "d1c11fdd",
+   "id": "76a4cc5f",
    "metadata": {},
    "outputs": [
     {
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e35848d0",
+   "id": "fc52251d",
    "metadata": {},
    "source": [
     "Prepocesamiento "
@@ -921,7 +921,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "021b0a13",
+   "id": "e3a252d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -932,7 +932,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a0b5a00",
+   "id": "2a56a9eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -945,7 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "78840587",
+   "id": "67dccfdb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -955,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "8ee41478",
+   "id": "bc81c11a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -965,7 +965,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "0dccffd2",
+   "id": "d67d8e9a",
    "metadata": {},
    "outputs": [
     {
@@ -986,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "96ef2fa7",
+   "id": "0b116b45",
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "f4feb415",
+   "id": "fbac2378",
    "metadata": {},
    "outputs": [
     {
@@ -1028,7 +1028,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "3c9c5b71",
+   "id": "ad7df66d",
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "955bd925",
+   "id": "0f68313c",
    "metadata": {},
    "outputs": [
     {
@@ -1085,7 +1085,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "72b7cc99",
+   "id": "42036a44",
    "metadata": {},
    "outputs": [
     {
@@ -1111,13 +1111,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b29fbb19",
+   "id": "d2fc6dd5",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "78268c49",
+   "id": "704ea074",
    "metadata": {},
    "source": [
     "## Imputador de KNN\n",
@@ -1128,7 +1128,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "875022f5",
+   "id": "bd8a0aa3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1139,7 +1139,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "25218df4",
+   "id": "2fd84bbf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1151,7 +1151,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "33b9e467",
+   "id": "81fa3bb8",
    "metadata": {},
    "outputs": [
     {
@@ -1250,7 +1250,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "5dff85e3",
+   "id": "26b4330b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1260,7 +1260,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "7273f77f",
+   "id": "18f06c3f",
    "metadata": {},
    "outputs": [
     {
@@ -1289,7 +1289,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "74e8b8ff",
+   "id": "95912293",
    "metadata": {},
    "outputs": [
     {
@@ -1317,7 +1317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff2b3d56",
+   "id": "60572486",
    "metadata": {},
    "source": [
     "## Escalado de DATOS "
@@ -1326,7 +1326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6f5d2c9",
+   "id": "54095f23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1336,7 +1336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81bf869d",
+   "id": "f6f13f7a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1346,7 +1346,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "baf404dc",
+   "id": "567e1fdf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1356,7 +1356,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "eb006b89",
+   "id": "9654938b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1367,7 +1367,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "fbd468ca",
+   "id": "1087a735",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1377,7 +1377,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "73286b4e",
+   "id": "9b23ecae",
    "metadata": {},
    "outputs": [
     {
@@ -1483,7 +1483,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "81fe89c6",
+   "id": "c2aff026",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1493,7 +1493,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "4112a3b9",
+   "id": "987f98b8",
    "metadata": {},
    "outputs": [
     {
@@ -1514,7 +1514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d60bc3cc",
+   "id": "67ac4c1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1524,7 +1524,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "be4a00bf",
+   "id": "e5da8f57",
    "metadata": {},
    "outputs": [
     {
@@ -1545,7 +1545,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "57d00c55",
+   "id": "10a59126",
    "metadata": {},
    "outputs": [
     {
@@ -1566,7 +1566,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "09f1dee3",
+   "id": "7fe29884",
    "metadata": {},
    "outputs": [
     {
@@ -1587,7 +1587,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "8585861f",
+   "id": "3e3a434a",
    "metadata": {},
    "outputs": [
     {
@@ -1618,7 +1618,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb6e4419",
+   "id": "1469911b",
    "metadata": {},
    "source": [
     "## Robuster scaler "
@@ -1627,7 +1627,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "ebc2ba25",
+   "id": "f2f4d462",
    "metadata": {},
    "outputs": [
     {
@@ -1648,7 +1648,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "8575128f",
+   "id": "07b20a0c",
    "metadata": {},
    "outputs": [
     {
@@ -1669,7 +1669,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "edfd6be0",
+   "id": "19f77ac9",
    "metadata": {},
    "outputs": [
     {
@@ -1700,7 +1700,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "2ea410c8",
+   "id": "31b13e17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1710,7 +1710,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "01820c5c",
+   "id": "6e8725df",
    "metadata": {},
    "outputs": [
     {
@@ -1731,7 +1731,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "a820c948",
+   "id": "ab60aa84",
    "metadata": {},
    "outputs": [
     {
