--- a/Exploracion_nicial.ipynb
+++ b/Exploracion_nicial.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "15896c01",
+   "id": "aafde0fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "6df7a6ab",
+   "id": "aef398dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "18379dd9",
+   "id": "32ccf069",
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "3874f508",
+   "id": "aa17039f",
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "076c2f3d",
+   "id": "17168733",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "2a7bbba3",
+   "id": "7f03df4e",
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "7313a2ef",
+   "id": "15514917",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "6fdc3c26",
+   "id": "ab681013",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "d34c7ef3",
+   "id": "b17a1bf4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "89563579",
+   "id": "cf94a37e",
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "1f01fb08",
+   "id": "730caf2d",
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "08051145",
+   "id": "2c4d9677",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "f960039d",
+   "id": "c471b176",
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "c0208048",
+   "id": "303dd966",
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "9c239487",
+   "id": "7a4f3b85",
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e976ba6",
+   "id": "aa69973e",
    "metadata": {},
    "source": [
     "table_sex=pd.crosstab(index=train['Sex'], columns=train['Risk'], margins=True)"
@@ -704,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "63212738",
+   "id": "16e2eb65",
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +785,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "868f82c9",
+   "id": "37a1e6ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,7 +795,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "718ae22a",
+   "id": "ba5cfaf0",
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +878,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "5de2acdd",
+   "id": "714d5a38",
    "metadata": {},
    "outputs": [
     {
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bb6f3b3",
+   "id": "5dba7405",
    "metadata": {},
    "source": [
     "Prepocesamiento "
@@ -921,7 +921,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "8da30c56",
+   "id": "cb3d60a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -932,7 +932,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "e770b959",
+   "id": "72e61ee9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -945,7 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "d35d875a",
+   "id": "d05b4aac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -955,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "f7be5630",
+   "id": "fa988b6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -965,7 +965,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "25cb7dab",
+   "id": "82c8aa05",
    "metadata": {},
    "outputs": [
     {
@@ -986,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "0972ebcf",
+   "id": "a9eff85d",
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "170e1f28",
+   "id": "d4e75954",
    "metadata": {},
    "outputs": [
     {
@@ -1028,7 +1028,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "2f9324ea",
+   "id": "ac1ddaeb",
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "6a2e43d6",
+   "id": "851777fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1060,7 +1060,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "57e2f0c6",
+   "id": "6d9096cd",
    "metadata": {},
    "outputs": [
     {
@@ -1086,13 +1086,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9b172f5",
+   "id": "583fef06",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "a34c4e26",
+   "id": "8f69696e",
    "metadata": {},
    "source": [
     "## Imputador de KNN\n",
@@ -1103,7 +1103,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "d25e69ed",
+   "id": "849a0299",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1114,7 +1114,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "0d53c4a3",
+   "id": "f96d3f09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1126,7 +1126,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "fcc8c376",
+   "id": "073841b2",
    "metadata": {},
    "outputs": [
     {
@@ -1225,7 +1225,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "91302922",
+   "id": "9220fe6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1235,7 +1235,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "14707007",
+   "id": "6282bce8",
    "metadata": {},
    "outputs": [
     {
@@ -1264,7 +1264,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "48539466",
+   "id": "9fe671f4",
    "metadata": {},
    "outputs": [
     {
@@ -1292,7 +1292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c69767d",
+   "id": "0a957503",
    "metadata": {},
    "source": [
     "## Escalado de DATOS "
@@ -1301,7 +1301,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "e34deccc",
+   "id": "71949c81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1311,7 +1311,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "ec9fe1c2",
+   "id": "e3978079",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1321,7 +1321,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "1db32c67",
+   "id": "c24f6c40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1331,7 +1331,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "0700c891",
+   "id": "e78d9873",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1342,7 +1342,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "f3e1dc5d",
+   "id": "0b14e8a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1352,7 +1352,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "1c412859",
+   "id": "b2492247",
    "metadata": {},
    "outputs": [
     {
@@ -1458,7 +1458,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "ea1dc5f3",
+   "id": "9766e40c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1468,7 +1468,7 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "216c4438",
+   "id": "29b91cc2",
    "metadata": {},
    "outputs": [
     {
@@ -1489,7 +1489,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "id": "c719a277",
+   "id": "5a7f2597",
    "metadata": {},
    "outputs": [
     {
@@ -1510,7 +1510,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "7e25adfd",
+   "id": "aa5714f1",
    "metadata": {},
    "outputs": [
     {
@@ -1531,7 +1531,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "f1969a03",
+   "id": "6e207897",
    "metadata": {},
    "outputs": [
     {
@@ -1552,7 +1552,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "id": "385771ab",
+   "id": "cdd66192",
    "metadata": {},
    "outputs": [
     {
@@ -1573,7 +1573,7 @@
   {
    "cell_type": "code",
    "execution_count": 169,
-   "id": "8b05cc95",
+   "id": "f6e37d46",
    "metadata": {},
    "outputs": [
     {
@@ -1604,7 +1604,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "629cf2f6",
+   "id": "0aaf512b",
    "metadata": {},
    "source": [
     "## Robuster scaler "
@@ -1613,7 +1613,7 @@
   {
    "cell_type": "code",
    "execution_count": 170,
-   "id": "29368cce",
+   "id": "65c8c71e",
    "metadata": {},
    "outputs": [
     {
@@ -1634,7 +1634,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "25a94019",
+   "id": "e26fe92a",
    "metadata": {},
    "outputs": [
     {
@@ -1655,7 +1655,7 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "id": "a00bafcc",
+   "id": "6eac7268",
    "metadata": {},
    "outputs": [
     {
@@ -1686,7 +1686,7 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "3014dfd9",
+   "id": "ff936263",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1696,7 +1696,7 @@
   {
    "cell_type": "code",
    "execution_count": 174,
-   "id": "7200d139",
+   "id": "69b9002d",
    "metadata": {},
    "outputs": [
     {
@@ -1717,7 +1717,7 @@
   {
    "cell_type": "code",
    "execution_count": 175,
-   "id": "92cdda0b",
+   "id": "2d95da9e",
    "metadata": {},
    "outputs": [
     {
@@ -1744,7 +1744,7 @@
   {
    "cell_type": "code",
    "execution_count": 176,
-   "id": "10a9a2dd",
+   "id": "ad8d3ba3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1754,7 +1754,7 @@
   {
    "cell_type": "code",
    "execution_count": 177,
-   "id": "84213859",
+   "id": "7e0a7fcc",
    "metadata": {},
    "outputs": [
     {
@@ -1993,7 +1993,7 @@
   {
    "cell_type": "code",
    "execution_count": 178,
-   "id": "d7be231c",
+   "id": "9ed6d154",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2003,7 +2003,7 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "id": "d20d5766",
+   "id": "145e3f8f",
    "metadata": {},
    "outputs": [
     {
@@ -2724,7 +2724,7 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "id": "2b590bd6",
+   "id": "d44316f1",
    "metadata": {},
    "outputs": [
     {
@@ -2745,7 +2745,7 @@
   {
    "cell_type": "code",
    "execution_count": 181,
-   "id": "6d643c0f",
+   "id": "3cad8427",
    "metadata": {},
    "outputs": [
     {
@@ -2765,7 +2765,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c2b918a",
+   "id": "2c201d56",
    "metadata": {},
    "source": [
     "CREAR PIPELINE PARA PRODUCCION "
@@ -2774,7 +2774,7 @@
   {
    "cell_type": "code",
    "execution_count": 182,
-   "id": "03cc2ace",
+   "id": "f4f8a608",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2784,7 +2784,7 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "id": "df260beb",
+   "id": "7013ed18",
    "metadata": {},
    "outputs": [
     {
@@ -3023,7 +3023,7 @@
   {
    "cell_type": "code",
    "execution_count": 184,
-   "id": "a2bfdb22",
+   "id": "1e57bc5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3038,7 +3038,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "f6bde9a1",
+   "id": "42bcd286",
    "metadata": {},
    "outputs": [
     {
@@ -3060,7 +3060,7 @@
   {
    "cell_type": "code",
    "execution_count": 188,
-   "id": "178d8fcf",
+   "id": "5c61d651",
    "metadata": {},
    "outputs": [
     {
@@ -3081,7 +3081,7 @@
   {
    "cell_type": "code",
    "execution_count": 189,
-   "id": "6fb52b68",
+   "id": "4fed3e69",
    "metadata": {},
    "outputs": [
     {
@@ -3102,7 +3102,7 @@
   {
    "cell_type": "code",
    "execution_count": 191,
-   "id": "01fa1385",
+   "id": "ea8f7d35",
    "metadata": {},
    "outputs": [
     {
@@ -3126,7 +3126,7 @@
   {
    "cell_type": "code",
    "execution_count": 193,
-   "id": "2ca60adb",
+   "id": "6bd915e5",
    "metadata": {},
    "outputs": [
     {
@@ -3153,7 +3153,7 @@
   {
    "cell_type": "code",
    "execution_count": 194,
-   "id": "6799a041",
+   "id": "ec0f89f6",
    "metadata": {},
    "outputs": [
     {
@@ -3182,7 +3182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ef2362d",
+   "id": "45f55efa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3192,7 +3192,7 @@
   {
    "cell_type": "code",
    "execution_count": 197,
-   "id": "40ac9150",
+   "id": "8f8f5db3",
    "metadata": {},
    "outputs": [
     {
@@ -3227,7 +3227,7 @@
   {
    "cell_type": "code",
    "execution_count": 203,
-   "id": "df9261d8",
+   "id": "a5730982",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3242,7 +3242,7 @@
   {
    "cell_type": "code",
    "execution_count": 204,
-   "id": "46d6394c",
+   "id": "ffea3d5a",
    "metadata": {},
    "outputs": [
     {
@@ -3265,7 +3265,7 @@
   {
    "cell_type": "code",
    "execution_count": 205,
-   "id": "889577bd",
+   "id": "05a07920",
    "metadata": {},
    "outputs": [
     {
@@ -3292,7 +3292,7 @@
   {
    "cell_type": "code",
    "execution_count": 208,
-   "id": "56c565ec",
+   "id": "abc04c9b",
    "metadata": {},
    "outputs": [
     {
@@ -3313,6 +3313,24 @@
    "source": [
     "categorical_pipeline[1].categories_"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "id": "a4cb9441",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.compose import ColumnTransformer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b23eadfc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
